# jay

./: .gitignore  Cargo.toml  flake.nix  package-lock.json  package.json  tsconfig.json
jay_macro/: Cargo.toml
pwa/: .eslintrc.json  package.json
pwa/src/: App.tsx
server/: cli.rs  error.rs  main.rs  useful.rs
server/jay_data/: mod.rs
src/: actions.ts  cli.rs  data.rs  db.rs  db.ts  error.rs  error.ts  index.ts  main.rs  schema.sql  useful.rs  useful.ts  uuid.ts
src/db/: dto.rs  error.rs  mod.rs
src/jay_data/: mod.rs  models.rs
src/sql/: schema.sql  test.sql
