[package]
name = "jay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
rusqlite = "0.27"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4"