[package]
name = "jay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jay"
path = "server/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
file-lock = "2.1.3"
tabled = "0.6.1"